<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:foregroundTint="#FFFFFF"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context=".RegistroIActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="27dp"
        android:paddingRight="30dp"
        android:layout_toEndOf="@+id/ivBack_i"
        android:gravity="center_horizontal"
        android:text="REGISTRO DE NUEVO USUARIO"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/txt_registry"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="90dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_namei"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/Counter"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/CounterOverFlow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etNombres"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorHint"
                    android:hapticFeedbackEnabled="false"
                    android:hint="@string/hNombres"
                    android:inputType="textCapWords"
                    android:shadowColor="@color/colorLetter"
                    android:textColor="@color/colorLetter"
                    android:textColorHighlight="@color/colorHint"
                    android:textColorHint="@color/colorHint"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="34dp"
                    tools:layout_editor_absoluteY="287dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_nameii"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorHint"
                app:counterEnabled="true"
                app:counterMaxLength="40"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/Counter"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/CounterOverFlow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etApellidos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorHint"
                    android:hapticFeedbackEnabled="false"
                    android:hint="@string/hApellidos"
                    android:inputType="textCapWords"
                    android:shadowColor="@color/colorLetter"
                    android:textColor="@color/colorLetter"
                    android:textColorHighlight="@color/colorHint"
                    android:textColorHint="@color/colorHint"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="34dp"
                    tools:layout_editor_absoluteY="287dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorHint"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/Counter"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/CounterOverFlow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etCorreo"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorHint"
                    android:hapticFeedbackEnabled="false"
                    android:hint="@string/hEmail"
                    android:inputType="textEmailAddress"
                    android:shadowColor="@color/colorLetter"
                    android:textColor="@color/colorLetter"
                    android:textColorHighlight="@color/colorHint"
                    android:textColorHint="@color/colorHint"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="34dp"
                    tools:layout_editor_absoluteY="287dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:gravity="left"
                android:text="@string/hTipoUsuario"
                android:textColor="@color/colorHint"
                android:textSize="20sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                tools:context=".MainActivity">

                <RadioGroup
                    android:id="@+id/rgSexualidad"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="3"
                    android:orientation="horizontal">

                    <RadioButton
                        android:id="@+id/rbU"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorHint"
                        android:text="@string/hTUsuario"
                        android:textColor="@color/colorHint"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/rbA"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:buttonTint="@color/colorHint"
                        android:text="@string/hTAuxiliar"
                        android:textColor="@color/colorHint"
                        android:textSize="20sp" />
                </RadioGroup>
            </LinearLayout>


            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/colorHint"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/Counter"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/CounterOverFlow"
                app:passwordToggleEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etContrasena"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorHint"
                    android:ems="10"
                    android:hint="@string/hPassword"
                    android:inputType="textPassword"
                    android:textColor="@color/colorLetter"
                    android:textColorHint="@color/colorHint"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="14dp"
                    tools:layout_editor_absoluteY="222dp" />

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/btnSiguiente"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/btn_yellow"
                android:text="@string/btnSiguiente"
                android:textColor="@drawable/txt_btn"
                android:textSize="23sp"
                tools:layout_editor_absoluteX="89dp"
                tools:layout_editor_absoluteY="424dp" />


        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/ivBack_i"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="55dp"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
</RelativeLayout>