<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="15dp"
    android:paddingRight="15dp"
    tools:context=".RegistroIIActivity">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="50dp"
        android:gravity="center_horizontal"
        android:text="@string/tvInformacionC"
        android:textColor="@color/colorDark"
        android:textSize="@dimen/txt_registry"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="25dp"
        tools:layout_editor_absoluteY="90dp" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginTop="120dp"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_padecimiento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/colorHint"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/Counter"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/CounterOverFlow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextPadecimiento"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorHint"
                    android:hapticFeedbackEnabled="false"
                    android:hint="@string/hPadecimiento"
                    android:inputType="textCapSentences"
                    android:paddingLeft="10dp"
                    android:shadowColor="@color/colorLetter"
                    android:textColor="@color/colorLetter"
                    android:textColorHighlight="@color/colorHint"
                    android:textColorHint="@color/colorHint"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="34dp"
                    tools:layout_editor_absoluteY="287dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_medicamento"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorHint"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/Counter"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/CounterOverFlow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextMedicamentos"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorHint"
                    android:hapticFeedbackEnabled="false"
                    android:hint="@string/hMedicamento"
                    android:inputType="textCapSentences"
                    android:paddingLeft="10dp"
                    android:shadowColor="@color/colorLetter"
                    android:textColor="@color/colorLetter"
                    android:textColorHighlight="@color/colorHint"
                    android:textColorHint="@color/colorHint"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="34dp"
                    tools:layout_editor_absoluteY="287dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_indicaciones"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorHint"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/Counter"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/CounterOverFlow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextIndicaciones"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorHint"
                    android:hapticFeedbackEnabled="false"
                    android:hint="@string/hIndicaciones"
                    android:inputType="textCapSentences"
                    android:paddingLeft="10dp"
                    android:shadowColor="@color/colorLetter"
                    android:textColor="@color/colorLetter"
                    android:textColorHighlight="@color/colorHint"
                    android:textColorHint="@color/colorHint"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="34dp"
                    tools:layout_editor_absoluteY="287dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_clinica"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textColorHint="@color/colorHint"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/Counter"
                app:errorEnabled="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNomClinica"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorHint"
                    android:hapticFeedbackEnabled="false"
                    android:hint="@string/hNombreClinica"
                    android:inputType="textCapSentences"
                    android:paddingLeft="10dp"
                    android:shadowColor="@color/colorLetter"
                    android:textColor="@color/colorLetter"
                    android:textColorHighlight="@color/colorHint"
                    android:textColorHint="@color/colorHint"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="34dp"
                    tools:layout_editor_absoluteY="287dp" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/text_input_nota"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:textColorHint="@color/colorHint"
                app:counterEnabled="true"
                app:counterMaxLength="30"
                app:counterOverflowTextAppearance="@style/CounterOverFlow"
                app:counterTextAppearance="@style/Counter"
                app:errorEnabled="true"
                app:errorTextAppearance="@style/CounterOverFlow">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/editTextNota"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:backgroundTint="@color/colorHint"
                    android:hapticFeedbackEnabled="false"
                    android:hint="@string/hNota"
                    android:inputType="textCapSentences"
                    android:paddingLeft="15dp"
                    android:paddingRight="15dp"
                    android:shadowColor="@color/colorLetter"
                    android:textColor="@color/colorLetter"
                    android:textColorHighlight="@color/colorHint"
                    android:textColorHint="@color/colorHint"
                    android:textSize="20sp"
                    tools:layout_editor_absoluteX="34dp"
                    tools:layout_editor_absoluteY="287dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <Button
                android:id="@+id/buttonRegistrar"
                android:layout_width="250dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="50dp"
                android:layout_marginBottom="100dp"
                android:background="@drawable/btn_yellow"
                android:onClick="confirmInput"
                android:text="@string/btnRegistrar"
                android:textColor="@drawable/txt_btn"
                android:textSize="23sp"
                tools:layout_editor_absoluteX="89dp"
                tools:layout_editor_absoluteY="424dp" />

        </LinearLayout>
    </ScrollView>

    <ImageView
        android:id="@+id/imageView10"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="5dp"
        android:layout_marginTop="55dp"
        app:srcCompat="@drawable/ic_baseline_arrow_back_ios_24" />
</RelativeLayout>